# Nucleo_wl55jc

./: .gitignore  CMakeLists.txt  README.md  build_project.sh
Plant/: CMakeLists.txt  prj.conf
Plant/boards/: nucleo_wl55jc.overlay
Plant/measures/: accelerometer.c  gps.c  rgb.c  soil.c  temperature.c
Plant/src/: connector.h  main.c
brightnessControl/: CMakeLists.txt  connector.h  measure.c
brightnessControl/boards/: nucleo_wl55jc.overlay
brightnessControl/src/: main.c
final_project/: CMakeLists.txt  connector.h  final_project.fzz  prj.conf
final_project/boards/: nucleo_wl55jc.overlay
final_project/headers/: accelerometerSensor.h  brightnessSensor.h  connector.h  rgbSensor.h  temperatureSensor.h
final_project/sensors/: accelerometerSensor.c  brightnessSensor.c  earthSensor.c  gpsSensor.c  rgbSensor.c  temperatureSensor.c
final_project/src/: main.c
src/: main.c
